nessus/k8s/nessus-namespace.yaml

---
kind: Namespace
apiVersion: v1
metadata:
  name: nessus
  labels:
    name: nessus
