nessus/k8s/nessus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessus-service
  namespace: nessus
spec:
  selector:
    app: nessus
  type: LoadBalancer
  ports:
    - name: webaccess
      protocol: TCP
      port: 443
      targetPort: 8834
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: netbios
      protocol: TCP
      port: 139
      targetPort: 139
    - name: smb
      protocol: TCP
      port: 445
      targetPort: 445
