nessus/k8s/nessus-netpolicy.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nessus-nacl
spec:
  podSelector:
    matchLabels:
      app: nessus
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - ipBlock:
        cidr: 192.168.0.0/16
        except:
          - 192.168.70.0/24
      - ports:
        - protocol: TCP
        - port: 443
      - ports:
        - protocol: TCP
        - port: 8834
  egress:
    - to:
      - ipBlock:
        cidr: 192.168.0.0/16
      - ports:
        - protocol: TCP
        - port: 139
      - ports:
        - protocol: TCP
        - port: 445
      - ports:
        - protocol: TCP
        - port: 22
